--- a/site/Coursera-site.html
+++ b/site/Coursera-site.html
@@ -1,4 +1,6 @@
 <!DOCTYPE html>
+
+
 <html>
     <head>
         <link rel="stylesheet" href="../stylesheet/styled.css">
@@ -9,9 +11,10 @@
         <div class = "HEADER">
             <h6>yoooooooo les mecs je suis un bg les mecs, j'mappele romeo yo</h6>
         </div>
-        <div style="padding:1000px">
+        <div style="padding:0px">
             
         </div>
         <h6> hey mec tu me regardes</h6>
+        <button>YO CLQUES MOI</button>
     </body>
 </html>
