--- a/site/Coursera-site.html
+++ b/site/Coursera-site.html
@@ -10,14 +10,13 @@
     </head>
     <body>
         <div class = "HEADER">
-            <h6>yoooooooo les mecs je suis un bg les mecs, j'mappele romeo yo</h6>
+            <h6>are you reading this? If so, I love you</h6>
         </div>
         <div style="padding:0px">
             
         </div>
-        <h6> hey mec tu me regardes</h6>
         <a href = "https://www.youtube.com/watch?v=jXQYe8HbOCc" target='_blank'>
-            <button>Die you son of a bitch</button> </a> 
+            <button>death here</button> </a> 
         <p> this is a paragraph. Hello, how are you? I am unda da watul. Yes you heard me. Under the water. I love your smile. Kiss me to death.</p>
     </body>
 </html>
