just some soulja boi

--- a/site/Coursera-site.html
+++ b/site/Coursera-site.html
@@ -20,6 +20,10 @@
         <a href = "https://www.bing.com/th/id/OIP.ktY1-0kRkL1Q9QoTorN3xQHaFj?pid=Api&rs=1" target='_blank'>
             <button>life here</button>
         </a>
-        <p> this is a paragraph. Hello, how are you? I am unda da watul. Yes you heard me. Under the water. I love your smile. Kiss me to death. Sometimes I think about you, you know? I really love you kiss me on the spot right here right now I don't care come on (No homo)</p>
+        <p> this is a paragraph. Hello, how are you? I am unda da watul. Yes you heard me. Under the water. 
+            I love your smile. Kiss me to death. Sometimes I think about you, you know? I really love you kiss me on the spot right
+            here right now I don't care come on (No homo) </p>
+        <img src="../images/yeayeayea.jfif"id=souljaboi>
+        
     </body>
 </html>
