--- a/site/Index.html
+++ b/site/Index.html
@@ -15,9 +15,9 @@
         <div style="padding:0px">
             
         </div>
-        <a href = "https://www.youtube.com/watch?v=jXQYe8HbOCc" target='_blank'>
+        <a href = "https://www.youtube.com/watch?v=jXQYe8HbOCc" target='_blank'id=deathhere>
             <button>death here</button> </a> 
-        <a href = "https://www.bing.com/th/id/OIP.ktY1-0kRkL1Q9QoTorN3xQHaFj?pid=Api&rs=1" target='_blank'>
+        <a href = "https://www.bing.com/th/id/OIP.ktY1-0kRkL1Q9QoTorN3xQHaFj?pid=Api&rs=1" target='_blank'id=lifehere>
             <button>life here</button>
         </a>
         <p> this is a paragraph. Hello, how are you? I am unda da watul. Yes you heard me. Under the water. 
